site/site/scdl/menus-collectifs/0.2.0/README.md
<MenuSchema />

# Schéma menus restauration collective

Ce schéma permet de décrire la composition des menus proposés par les collectivités locales ou les syndicats mixtes de restauration. Il est complété par un autre schéma décrivant la composition des plats

## Contexte

Cette initiative vide à standardiser la publication des jeux de données relatifs aux offres de restauration collective. Elle concerne la restauration scolaire mais peut s'étendre aux offres de restauration pour les personnes âgées, les restaurants administratifs ou les centres de loisirs. Elle s'articule autour des notions de menus, et des plats qui les composent. Un schéma complémentaire est dédié à la composition des plats permettant pour ceux qui le souhaitent de décire les ingrédients et nutriments qui entrent dans la composition des plats. Les 2 schéma sont liés par une clé commune "codePlat".


## Documents de cadrage juridique

* 50% de produits durables ou sous signes d'origine et de qualité (dont des produits bio) dans la restauration collective publique à partir du 1er janvier 2022 :https://www.legifrance.gouv.fr/affichTexte.do?cidTexte=JORFTEXT000037547946&categorieLien=id#JORFARTI000037547961
* Décret 1227-2011 relatif à la qualité nutritionnelle des repas servis en restauration scolaire
* Recommandations du GEMRCN (Groupe d'Etude des Marchés de la Restauration Collective et Nutrition,
* Réglement 1169/2011 concernant l'information des consommateurs sur les denrées alimentaires (réglement INCO).
* Règlement (UE) n°1169/2011 concernant l’information du consommateur sur les denrées alimentaires et notamment ses articles 9, 21, 44 et l’annexe II sur les substances ou produits provoquant des allergies ou intolérances.
* Décret n°2015-447 du 17 avril 2015 relatif à l’information des consommateurs sur les allergènes et les denrées alimentaires non préemballées.        

## Outils

* [![](https://scdl.opendatafrance.net/docs/assets/validata-logo-horizontal.png)](https://go.validata.fr/table-schema?schema_name=scdl.menus-collectifs) [Valider un fichier avec Validata](http://go.validata.fr/table-schema?schema_name=scdl.menus-collectifs)
* [Créer un fichier avec CSV Good Generator](https://csv-gg.etalab.studio/?schema=scdl)
* [Télécharger un fichier gabarit au format XLSX](https://scdl.opendatafrance.net/docs/templates/menus-collectifs.xlsx)


## Voir aussi

* adresser un message à [scdl@opendatafrance.email](mailto:scdl@opendatafrance.email?subject=menus-collectifs)
* ouvrir un ticket sur le [dépôt GitLab d’OpenDataFrance](https://git.opendatafrance.net/scdl/menus-collectifs/issues)